# HyperReview

./: .eslintignore  .gitignore  .prettierignore  1  AGENTS.md  CLAUDE.md  Cargo.toml  DIFF_VIEW_FIX_SUMMARY.md  DIRECTORY_TREE_OPTIMIZATION.md  DIRECTORY_TREE_UPDATE.md  GERRIT_DEBUG_TEST.md  GERRIT_FINAL_TEST.md  GERRIT_IMPLEMENTATION_SUMMARY.md  GERRIT_UI_TEST.md  GERRIT_UI_TEST_GUIDE.md  IMPLEMENTATION-STATUS.md  PHASE9_SUMMARY.md  REACT_HOOKS_FIX.md  README.md  build.rs  clippy.toml  index.html  jest.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  temp_fix.txt  test-gerrit-integration.sh  test_active_instance_fix.sh  test_complete_diff_api.sh  test_connection_fix.sh  test_database_migration_real.sh  test_empty_search_fix.sh  test_gerrit_integration.sh  tsconfig.json  vite.config.ts
.root_claude/: history.jsonl
.specify/memory/: constitution.md
backup/gerrit-cleanup/: change_repository.rs.disabled  comment_repository.rs.disabled  gerrit_client_backup.rs
docs/: CheckList.json
docs/V0.1.0/: BUGFIX_ERROR_LOADING_FILE.md  FILE_EXISTS_VISUAL_INDICATORS.md  FRIENDLY_FILE_NOT_FOUND_UI.md  UI.md  VERIFICATION_SUMMARY.md  design.md  req.md  research.md
docs/V0.2.0/: req.md
docs/for_tauri-1.x/: DEPLOYMENT.md  DIALOG_FIX_FINAL.md  DIALOG_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INFINITE_LOOP_FIX.md  REPOSITORY_SWITCH_FIX.md
examples/: demo.rs
frontend/: App.tsx  PHASE1-SETUP-SUMMARY.md  PHASE2-FOUNDATIONAL-SUMMARY.md  i18n.tsx  index.css  index.html  index.tsx  types.ts
frontend/api/: client.ts
frontend/components/: ActionBar.tsx  BranchCompareModal.tsx  BranchList.tsx  CommandPalette.tsx  CommentCreator.tsx  CommentForm.tsx  CommentList.tsx  CommentThread.tsx  CreateLocalTaskModal.tsx  CredentialManager.tsx  DiffLine.tsx  DiffView.tsx  EditTaskModal.tsx  ErrorBoundary.tsx  ExportDialog.tsx  ExternalSubmissionDialog.tsx  GerritChangeList.tsx  GerritDiffViewer.tsx  GerritImportModal.tsx  GerritInstanceForm.tsx  GerritPushControls.tsx  GerritReviewSubmit.tsx  ImportTaskModal.tsx  LoadingSpinner.tsx  Modal.tsx  NewTaskModal.tsx  NewTaskModal.tsx.backup  OpenRepoModal.tsx  RecentRepos.tsx  RepositorySelector.tsx  ReviewActionModal.tsx  RightPanel.tsx  SearchBox.tsx  SettingsModal.tsx  SettingsModal.tsx.backup  StatusBar.tsx  SubmitReviewModal.tsx  SyncStatusModal.tsx  TagManager.tsx  TagManagerModal.tsx  (+11 more)
frontend/config/: README-environment.md  environment.ts
frontend/context/: LoadingContext.tsx  LoadingHelpers.ts  README-loading-context.md
frontend/hooks/: README.md  useBranchSelectionPersistence.ts  useComments.ts  useGerritChanges.ts  useIPC.ts  useKeyboardShortcuts.ts  useLocalTasks.ts  useRepository.ts
frontend/services/: commentService.ts  gerrit-instance-service.ts  gerrit-simple-service.ts  reviewService.ts
frontend/store/: gerritStore.ts  reviewStore.ts  syncStore.ts  taskStore.ts
frontend/types/: env.d.ts  task.ts
frontend/utils/: README-error-handling.md  cache.ts  dateUtils.ts  diffOptimization.ts  errorHandler.ts  metrics.tsx  offlineCache.ts  validation.ts
scripts/: compress-bundles.sh  test_diff_fix.rs  test_file_tree_fix_complete.sh  test_heatmap_fix.sh
specs/001-backend-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pr-review-mvp/: data-model.md  research.md  tasks.md
specs/002-frontend-backend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-local-task-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-gerrit-integration/: spec.md
specs/005-gerrit-integration/: api-contracts.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-merge-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: app.rs  config.rs  error.rs  main.rs  setupTests.ts
src-tauri/: Cargo.toml  debug_parser.rs  deny.toml  hyper_review.db  tauri.conf.json
src-tauri/capabilities/: local_tasks.json
src-tauri/docs/: api.md
src-tauri/examples/: test_complete_diff.rs  test_diff_fix.rs  test_file_tree_branches.rs  test_heatmap_branches.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  models.rs
src-tauri/src/analysis/: checklist.rs  diff_analysis.rs  engine.rs  grammars.rs  heatmap.rs  stats.rs
src-tauri/src/commands/: change_download_commands.rs  comment_engine_commands.rs  diff_engine_commands.rs  file_storage_commands.rs  file_tree_commands.rs  general.rs  gerrit_commands.rs  gerrit_simple.rs  gerrit_test.rs  mod.rs  persistence_commands.rs  review_session_commands.rs  task_commands.rs  task_commands_clean.rs  test_create_task.rs  test_create_task_core.rs  test_export_tasks.rs  test_export_tasks_core.rs  test_update_task_progress_core.rs  test_update_task_status.rs  text_parser.rs  text_parser.rs.bak  text_parser_test.rs
src-tauri/src/git/: complete_diff.rs  diff.rs  mod.rs  repo_manager.rs  service.rs
src-tauri/src/models/: gerrit.rs  mod.rs  task.rs
src-tauri/src/remote/: client.rs  codearts_client.rs  custom_client.rs  gerrit_client.rs  gitlab_client.rs
src-tauri/src/search/: index.rs  service.rs
src-tauri/src/services/: change_downloader.rs  comment_engine.rs  credential_store.rs  diff_engine.rs  encryption.rs  file_storage.rs  file_tree.rs  mod.rs  review_session.rs  sync_manager.rs
src-tauri/src/storage/: cache.rs  credentials.rs  encryption.rs  file_lock.rs  metadata.rs  migrations.rs  mod.rs  offline_cache.rs  operation_queue.rs  settings.rs  sqlite.rs  task_store.rs
src-tauri/src/utils/: memory.rs  metrics.rs  security.rs  validation.rs
src-tauri/tests/: gerrit_integration_test.rs  test_active_instance.rs  test_migration_functionality.rs  test_search_query_validation.rs  test_task_management.rs
src/actions/: inbox.rs  mod.rs  navigation.rs  review.rs
src/models/: account.rs  diff.rs  enums.rs  ids.rs  mod.rs  pull_request.rs  repository.rs
src/services/: db.rs  git.rs  github.rs  highlight.rs  mod.rs
src/views/: mod.rs  (+7 more)
tests/: milestone1_demo.rs
(+77 files in other folders)
