[package]
name = "hyperreview"
version = "0.1.0"
edition = "2024"
authors = ["HyperReview Team"]
description = "Native, GPU-accelerated PR review application"
license = "MIT"
repository = "https://github.com/hyperreview/hyperreview"

[dependencies]
# UI Framework - GPU-accelerated (Constitutional requirement)
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

# Async Runtime (Constitutional requirement)
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Git Operations (Constitutional requirement)
git2 = "0.18"

# Database - SQLite (Constitutional requirement)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Syntax Highlighting (Constitutional requirement)
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"

# HTTP Client for GitHub API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Markdown Rendering (Constitutional - recommended)
pulldown-cmark = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# ID Generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Secure Token Storage
keyring = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2.5"

# Platform directories
dirs = "5.0"

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
