[package]
name = "hyperreview"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperreview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Git operations
git2 = "0.18"

# Code analysis
tree-sitter = "0.20"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.20"
tree-sitter-xml = "0.7"
tree-sitter-sql = "0.0"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Concurrency
rayon = "1.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Regular expressions
regex = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Caching
lru = "0.12"

# System info
sys-info = "0.9"

# Encryption
base64 = "0.22"

# Random
rand = "0.8"

