[package]
name = "hyperreview_lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperreview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
# Tauri
tauri = { version = "1.8", features = [ "dialog-ask", "dialog-message", "dialog-confirm",  "dialog-open", "dialog-save", "fs-read-file", "fs-create-dir", "fs-remove-dir", "fs-rename-file", "fs-remove-file", "fs-read-dir", "fs-write-file", "fs-copy-file", "fs-exists", "shell-open", "devtools"] }
# tauri-plugin-opener = "1"
# tauri-plugin-dialog = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Git operations
git2 = "0.18"

# Code analysis
tree-sitter = "0.20"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.20"
tree-sitter-xml = "0.7"
tree-sitter-sql = "0.0"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }
urlencoding = "2.1"

# Encryption for credentials
aes-gcm = "0.10"
argon2 = "0.5"
password-hash = "0.5"

# Concurrency
rayon = "1.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Regular expressions
regex = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Caching
lru = "0.12"

# System info
sys-info = "0.9"

# Directory utilities
dirs = "5.0"

# Encryption
base64 = "0.22"

# Random
rand = "0.8"

# Testing
tempfile = "3.8"
mockito = "1.0"

# Security: Force upgrade of idna to fix RUSTSEC-2024-0421
idna = "1.0.3"

# =============================================================================
# Release Profile Optimizations for Bundle Size
# =============================================================================

[profile.release]
# Link Time Optimization for smaller binary size
lto = true

# Optimize for size
opt-level = "s"

# Single codegen unit for better optimization
codegen-units = 1

# Abort on panic to reduce binary size
panic = "abort"

# Strip debug symbols
strip = true

# Enable incremental compilation for faster builds (trade-off with size)
incremental = false

[features]
# 生产构建时启用，让前端资源走 tauri:// 协议而非 http://
custom-protocol = ["tauri/custom-protocol"]
